# research-software-release-baseline

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  apptainer_container.def  pyproject.toml
docs/: conf.py  index.rst
src/project_name/: cli.py  core.py
tests/test_project_name/: test_core.py
